Fix social links on mobile?

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1262,10 +1262,18 @@ body .close{
    bottom: 5%;
 }
 
+.up {
+   bottom: 298px !important;
+}
+
 @media only screen and (max-height: 400px) {
    #share-right {
       bottom: 10px;
       margin-right: -96px;
       width: 96px;
+   }
+
+   .up {
+      bottom: 154px !important;
    }
 }
